[package]
name = "xtensa-lx-rt"
version = "0.11.0"
description = "Low level access for Xtensa LX processors"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["xtensa", "lx", "register", "peripheral"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/esp-rs/xtensa-lx-rt"
authors = [
    "Scott Mabin <scott@mabez.dev>", 
    "Arjan Mels <arjan@mels.email>",
    "Robin Appelman <robin@icewind.nl>",
]
edition = "2018"

[package.metadata.docs.rs]
features = ["esp32"]

[dependencies]
bare-metal = "1.0.0"
r0 = "1.0.0"
xtensa-lx-rt-proc-macros = { path = "procmacros", version = "=0.1.0" }

[build-dependencies]
core-isa-parser = { path = "core-isa-parser", version = "=0.2.0" }
minijinja = "0.15.0"

[features]
esp32   = []
esp32s2 = []
esp32s3 = []
esp8266 = []
