  
[package]
authors = ["Jorge Aparicio <jorge@japaric.io>","Arjan Mels <arjan@mels.email>"]
categories = ["embedded", "no-std"]
description = "Attributes re-exported in `xtensa-lx6-rt`"
documentation = "https://docs.rs/xtensa-lx6-rt"
keywords = ["esp32", "xtensa-lx6-rt", "runtime", "startup"]
license = "MIT OR Apache-2.0"
name = "xtensa-lx6-rt-proc-macros"
repository = "https://github.com/esp-rs/xtensa-lx6-rt"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
features = ["extra-traits", "full"]
version = "1.0"